authentik/authentik-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: authentik-worker
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: authentik-worker
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9300"
        prometheus.io/path: "/metrics"
      labels:
        app.kubernetes.io/name: authentik
        app.kubernetes.io/component: authentik-worker
        app.kubernetes.io/part-of: authentik
        app.kubernetes.io/managed-by: kubectl
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: authentik
                  app.kubernetes.io/component: authentik-server
              namespaces:
                - authentik
              topologyKey: kubernetes.io/hostname
      containers:
        - name: authentik-worker
          image: ghcr.io/goauthentik/server:2026.8.3
          args:
            - worker
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            exec:
              command:
                - ak
                - healthcheck
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - ak
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - name: metrics
              containerPort: 9300
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: authentik
