authentik/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
          securityContext:
            runAsUser: 1004
            runAsGroup: 100
      volumes:
        - name: database
          nfs:
            path: /export/Kubernetes/authentik/database
            server: 192.168.86.107
