authentik/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6
          ports:
          - containerPort: 6379
          volumeMounts:
          - mountPath: /data
            name: redis-data
      volumes:
        - name: redis-data
          emptyDir: {}
