authentik/authentik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  selector:
    app: authentik-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
