authentik/authentik-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-worker
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: authentik-worker
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: authentik-worker
  ports:
    - name: metrics
      protocol: TCP
      port: 9300
      targetPort: 9300
