authentik/authentik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.albinmedoc.se`)
      kind: Rule
      services:
      - name: authentik
        port: 80
